# CanonEOS_Omarchy

./: .gitignore  CLAUDE.md  CMakeLists.txt  PRD.md  README.md  TESTING.md  deploy.sh  install-plugin.sh  test-plugin-manual.sh  test-plugin.sh
src/: camera-detector.c  camera-detector.h  canon-camera.c  canon-camera.h  canon-errors.h  plugin-main.c  video-source.c  video-source.h
src/utils/: error-handling.c  error-handling.h  logging.c  logging.h
